// Copyright (c) 2019 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;

// IPSecVpnTunnel is used to store definition of a sase config as a k8s CRD resource.
message IPSecVpnTunnel {
    // TunnelName
    string tunnel_name = 1;
    // TunnelType
    string tunnel_type = 2;
    // Sase Service Instance Name
    string service_instance_name = 3;
    // Tunnel Destination IP
    string tunnel_destination_ip = 4;
    // Tunnel Source IP
    string tunnel_source_ip = 5;
    // Security Parameters for the tunnel
    string security_association = 6;
    // Tunnel Interface IP Type
    string interface_type = 7;
}
